# quasar

./: DOCUMENTATION.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test-publish.yml  tests.yml
examples/: basic_rag.py
quasar/: __init__.py  core.py
tests/: test_core.py
