[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar-context"
version = "0.1.0"
description = "Faithful context optimization for RAG apps — compress without corrupting critical data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sebastian Sabo" }]
keywords = ["rag", "llm", "context", "compression", "prompt", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/sebastiansabo/quasar"
Issues = "https://github.com/sebastiansabo/quasar/issues"

[tool.setuptools.packages.find]
include = ["quasar*"]
